--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,14 @@
-group = 'com.idmesh'
-version = '1.0-SNAPSHOT'
-
 buildscript {
     repositories {
         jcenter()
-        // enable this to use snapshot versions of Gretty:
-        // maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
     }
 
     dependencies {
         classpath 'org.akhikhl.gretty:gretty:+'
     }
 }
-
-allprojects {
-    repositories {
-        maven {
-            url 'https://maven.aliyun.com/repository/public'
-        }
-    }
-}
+group = 'com.idmesh'
+version = '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'war'
@@ -32,6 +21,9 @@ compileJava {
 
 repositories {
     mavenCentral()
+    maven {
+        url('https://s01.oss.sonatype.org/content/repositories/snapshots')
+    }
 }
 
 gretty {
@@ -45,7 +37,7 @@ dependencies {
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     compile 'com.google.code.gson:gson:2.9.1'
-    compile 'cn.idmesh.sdk:idmesh-java-mvc-common:0.1.0-SNAPSHOT'
+    compile 'cn.idmesh.sdk:idmesh-java-mvc-common:0.1.1-SNAPSHOT'
     compile 'javax.servlet:javax.servlet-api:4.0.1'
     compile 'org.apache.commons:commons-lang3:3.12.0'
     compile 'org.bitbucket.b_c:jose4j:0.9.3'
